<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff" >
    
    
        <!-- Header  Starts -->

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@layout/header_gradient"
            android:paddingBottom="5dip"
            android:paddingTop="5dip" >

            <!-- Logo Start -->

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:src="@drawable/logo" />
            <!-- Logo Ends -->
        </LinearLayout>

        <!-- Header Ends -->
        <!-- Footer Start -->
        <!-- Footer Ends -->


        <!-- Login Form -->

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:orientation="vertical"
            android:padding="10dip" >

            <!-- Email Label -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.84"
                android:text="IMPORTANT: In this section, you will be asked to provide information about ABDOMINAL PAIN YOU BELIEVE OR WERE TOLD TO BE FROM YOUR “PANCREATITIS”. Please DO NOT provide information on pain other than from pancreatitis. On a scale of 1-10, mild pain is described as 1-3, moderate as 4-7 and severe as 8-10."
                android:textColor="#372c24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.84"
                android:text=""
                android:textColor="#372c24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.84"
                android:text="Do you have abdominal pain today that you believe is from your pancreatitis?"
                android:textColor="#372c24" />
            
            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radio0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/alc_yes"
                    android:textColor="#000" />

                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alc_no"
                    android:textColor="#000" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout1"
            android:orientation="vertical"
            android:padding="10dip" >

            <!-- Email Label -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.63"
                android:text="If you have abdominal pain today, please tick along the scale below for your episodes of abdominal pain:"
                android:textColor="#372c24" />

            <SeekBar
            android:id="@+id/seekBar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="14dp" />
            
            <TextView android:id="@+id/textview"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textColor="#372c24" />
            
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout2"
            android:orientation="vertical"
            android:padding="10dip" >

            <!-- Email Label -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.63"
                android:text="Have you had abdominal pain from pancreatitis within the past year?"
                android:textColor="#372c24" />
            
            <RadioGroup
                android:id="@+id/radioGroup2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/alc_yes"
                    android:textColor="#000" />

                <RadioButton
                    android:id="@+id/radio3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alc_no"
                    android:textColor="#000" />
                
            </RadioGroup>
            
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout3"
            android:orientation="vertical"
            android:padding="10dip" >
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.63"
                android:text="Several patterns of pain have been described in pancreatitis.  Please identify the type of pain
that best fits your condition"
                android:textColor="#372c24" />
            
            <RadioGroup
                android:id="@+id/radioGroup3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radio4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/radio_epi"
                    android:textColor="#000" />

                <RadioButton
                    android:id="@+id/radio5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_mild"
                    android:textColor="#000" />
                
                <RadioButton
                    android:id="@+id/radio6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_free"
                    android:textColor="#000" />
            
                <RadioButton
                    android:id="@+id/radio7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_cons_mild"
                    android:textColor="#000" />
            
                <RadioButton
                    android:id="@+id/radio8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_severe"
                    android:textColor="#000" />
                
            </RadioGroup>
            
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout4"
            android:orientation="vertical"
            android:padding="10dip" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.63"
                android:text="Do you have abdominal pain today that you believe is from your pancreatitis?"
                android:textColor="#372c24" />
            
            <RadioGroup
                android:id="@+id/radioGroup4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radio6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/alc_yes"
                    android:textColor="#000" />

                <RadioButton
                    android:id="@+id/radio7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alc_no"
                    android:textColor="#000" />
        
                </RadioGroup>
            
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout5"
            android:orientation="vertical"
            android:padding="10dip" >
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.63"
                android:text="If you have abdominal pain today, please tick along the scale below for your episodes of abdominal pain:"
                android:textColor="#372c24" />
            <SeekBar
            android:id="@+id/seekBar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="14dp" />
            
            <TextView android:id="@+id/textview1"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textColor="#372c24" />
            
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout6"
            android:orientation="vertical"
            android:padding="10dip" >
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.63"
                android:text="Have you had abdominal pain since your last clinic visit?"
                android:textColor="#372c24" />
            
            <RadioGroup
                android:id="@+id/radioGroup5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radio8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/alc_yes"
                    android:textColor="#000" />

                <RadioButton
                    android:id="@+id/radio9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alc_no"
                    android:textColor="#000" />
                </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.63"
                android:text=" Please identify the type of pain that best fits your condition"
                android:textColor="#372c24" />
            
         </LinearLayout>
         
        <LinearLayout
            android:id="@+id/linearLayout8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout7"
            android:orientation="vertical"
            android:padding="10dip" >

            <RadioButton
                android:id="@+id/radio13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_cons_mild"
                android:textColor="#000" />
            
            <RadioGroup
                android:id="@+id/radioGroup10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radio12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_free"
                    android:textColor="#000" />

                <RadioButton
                    android:id="@+id/radio4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/radio_epi"
                    android:textColor="#000" />

                <RadioButton
                    android:id="@+id/radio11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_mild"
                    android:textColor="#000" />
                
            </RadioGroup>
            
        </LinearLayout>

         		 <LinearLayout
         		     android:id="@+id/linearLayout9"
         		     android:layout_width="match_parent"
         		     android:layout_height="wrap_content"
         		     android:layout_below="@+id/linearLayout8"
         		     android:orientation="vertical"
         		     android:padding="10dip" >

         		     <Button
         		         android:id="@+id/submit"
         		         style="?android:attr/buttonStyleSmall"
         		         android:layout_width="288dp"
         		         android:layout_height="wrap_content"
         		         android:text="Submit" />

         		 </LinearLayout>
        
    </RelativeLayout>

</ScrollView>