<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff" >
    
    
        <!-- Header  Starts -->

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@layout/header_gradient"
            android:paddingBottom="5dip"
            android:paddingTop="5dip" >

            <!-- Logo Start -->

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:src="@drawable/logo" />
            <!-- Logo Ends -->
        </LinearLayout>

        <!-- Header Ends -->
        <!-- Footer Start -->
        <!-- Footer Ends -->


        <!-- Login Form -->

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:orientation="horizontal"
            android:padding="10dip" >

            <!-- Email Label -->

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="Full Name"
                android:textColor="#372c24" />

            <!-- Submit button -->

            <EditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" >

            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout1"
            android:orientation="horizontal"
            android:padding="10dip" >

            <!-- Email Label -->

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="Age"
                android:textColor="#372c24" />

            <!-- Submit button -->

            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout2"
            android:orientation="horizontal"
            android:padding="10dip" >

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="Sex"
                android:textColor="#372c24" />

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radio0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/radio_male"
                    android:textColor="#000" />

                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_female"
                    android:textColor="#000" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout3"
            android:orientation="horizontal"
            android:padding="10dip" >

            <!-- Email Label -->

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="Height"
                android:textColor="#372c24" />

            <!-- Submit button -->

            <EditText
                android:id="@+id/editText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" >
            </EditText>
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout4"
            android:orientation="horizontal"
            android:padding="10dip" >

            <!-- Email Label -->

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="Weight"
                android:textColor="#372c24" />

            <!-- Submit button -->

            <EditText
                android:id="@+id/editText4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" >
            </EditText>
        </LinearLayout>
     
         <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout5"
            android:orientation="horizontal"
            android:padding="10dip" >

            <!-- Email Label -->

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="Waist"
                android:textColor="#372c24" />

            <!-- Submit button -->

            <EditText
                android:id="@+id/editText5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout6"
            android:orientation="vertical"
            android:padding="10dip" >

            <!-- Email Label -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.90"
                android:text="What is the highest grade or level of school you have completed or the highest degree you have received?"
                android:textColor="#372c24" />

            <!-- Submit button -->

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/edu_arrays"
                android:prompt="@string/edu_prompt" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout7"
            android:orientation="vertical"
            android:padding="10dip" >

            <!-- Email Label -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.90"
                android:text="Current Employment Status"
                android:textColor="#372c24" />

            <!-- Submit button -->

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/emp_arrays"
                android:prompt="@string/emp_prompt" />

        </LinearLayout>
       
        <LinearLayout
            android:id="@+id/linearLayout9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout8"
            android:orientation="vertical"
            android:padding="10dip" >

            <!-- Email Label -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.72"
                android:text="Specify Employment if Selecting Others"
                android:textColor="#372c24" />

            <!-- Submit button -->

            <EditText
                android:id="@+id/editText7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" >
            </EditText>
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/linearLayout10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout9"
            android:orientation="horizontal"
            android:padding="10dip" >

            <!-- Email Label -->

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="ROS"
                android:textColor="#372c24" />

            <!-- Submit button -->

            <EditText
                android:id="@+id/editText8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" >
            </EditText>
        </LinearLayout>
         
        <LinearLayout
            android:id="@+id/linearLayout11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout10"
            android:orientation="horizontal"
            android:padding="10dip" >

            <!-- Email Label -->

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="PMHX"
                android:textColor="#372c24" />

            <!-- Submit button -->

            <EditText
                android:id="@+id/editText9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" >
            </EditText>
            
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/linearLayout12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout11"
            android:orientation="horizontal"
            android:padding="10dip" >

            <!-- Email Label -->

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="Family HX"
                android:textColor="#372c24" />

            <!-- Submit button -->

            <EditText
                android:id="@+id/editText10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" >
            </EditText>
            
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/linearLayout13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout12"
            android:orientation="horizontal"
            android:padding="10dip" >

            <!-- Email Label -->

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="Surgeries"
                android:textColor="#372c24" />

            <!-- Submit button -->

            <EditText
                android:id="@+id/editText11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" >
            </EditText>
            
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/linearLayout14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout13"
            android:orientation="horizontal"
            android:padding="10dip" >
        
         <Button android:id="@+id/btnContinue" 
		  		android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:layout_marginTop="10dip"
		  		android:text="Continue"/>
		  
        </LinearLayout>
        
    </RelativeLayout>

</ScrollView>